apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__authenticated__tests__introspection_fragment_with_authenticated_root_query.snap
---
source: apollo-router/src/plugins/authorization/authenticated.rs
assertion_line: 1940
expression: first_response
---
{
  "data": {
    "__schema": {
      "types": [
        {
          "name": "__Schema"
        },
        {
          "name": "__Type"
        },
        {
          "name": "__TypeKind"
        },
        {
          "name": "__Field"
        },
        {
          "name": "__InputValue"
        },
        {
          "name": "__EnumValue"
        },
        {
          "name": "__Directive"
        },
        {
          "name": "__DirectiveLocation"
        },
        {
          "name": "String"
        },
        {
          "name": "Boolean"
        },
        {
          "name": "Query"
        },
        {
          "name": "T"
        }
      ]
    }
  }
}
