apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__authenticated__tests__introspection_mixed_with_authenticated_fields.snap
---
source: apollo-router/src/plugins/authorization/authenticated.rs
assertion_line: 1998
expression: first_response
---
{
  "errors": [
    {
      "message": "Mixed queries with both schema introspection and concrete fields are not supported yet: https://github.com/apollographql/router/issues/2789",
      "extensions": {
        "code": "MIXED_INTROSPECTION"
      }
    }
  ]
}
