apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__authenticated__tests__mutation.snap
---
source: apollo-router/src/plugins/authorization/authenticated.rs
assertion_line: 652
expression: "TestResult { query: QUERY, result: doc, paths }"
---
query:

        mutation {
            other
        }
        
filtered:

paths: [""]
