apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__authenticated__tests__named_fragment_nested_in_authenticated_type.snap
---
source: apollo-router/src/plugins/authorization/authenticated.rs
assertion_line: 1778
expression: "TestResult { query: QUERY, result: doc, paths }"
---
query:

        query {
            t {
                ... F
            }
        }

        fragment F on T {
            f
        }
        
filtered:

paths: [""]
