apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__authenticated__tests__query_field_alias.snap
---
source: apollo-router/src/plugins/authorization/authenticated.rs
assertion_line: 698
expression: "TestResult { query: QUERY, result: doc, paths }"
---
query:

        query {
            topProducts {
                type
            }

            moi: me {
                name
            }
        }
        
filtered:
{
  topProducts {
    type
  }
}

paths: ["/me"]
