apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__authenticated__tests__renamed_directive.snap
---
source: apollo-router/src/plugins/authorization/authenticated.rs
assertion_line: 1203
expression: "TestResult { query: QUERY, result: doc, paths }"
---
query:

        query {
            topProducts {
                type
            }

            me {
                name
            }
        }
        
filtered:
{
  topProducts {
    type
  }
}

paths: ["/me"]
