apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__authenticated__tests__scalar.snap
---
source: apollo-router/src/plugins/authorization/authenticated.rs
assertion_line: 718
expression: "TestResult { query: QUERY, result: doc, paths }"
---
query:

        query {
            topProducts {
                type
                internal
            }
        }
        
filtered:
{
  topProducts {
    type
  }
}

paths: ["/topProducts/internal"]
