apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__authenticated__tests__test.snap
---
source: apollo-router/src/plugins/authorization/authenticated.rs
assertion_line: 870
expression: "TestResult { query: QUERY, result: doc, paths }"
---
query:

        query {
            topProducts {
                type
                reviews {
                    body
                }
            }

            customer {
                name
            }
        }
        
filtered:
{
  topProducts {
    type
  }
}

paths: ["/topProducts/reviews/@", "/customer"]
