apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__authenticated__tests__unauthenticated_request.snap
---
source: apollo-router/src/plugins/authorization/authenticated.rs
assertion_line: 1611
expression: response
---
{
  "data": {
    "orga": {
      "id": 1,
      "creatorUser": {
        "id": 0,
        "name": "Ada",
        "phone": null
      }
    }
  },
  "errors": [
    {
      "message": "Unauthorized field or type",
      "path": [
        "orga",
        "creatorUser",
        "phone"
      ],
      "extensions": {
        "code": "UNAUTHORIZED_FIELD_OR_TYPE"
      }
    }
  ]
}
