apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__authenticated__tests__unauthenticated_request_defer.snap
---
source: apollo-router/src/plugins/authorization/authenticated.rs
assertion_line: 1692
expression: first_response
---
{
  "data": {
    "orga": {
      "id": 1,
      "creatorUser": {
        "id": 0
      }
    }
  },
  "errors": [
    {
      "message": "Unauthorized field or type",
      "path": [
        "orga"
      ],
      "extensions": {
        "code": "UNAUTHORIZED_FIELD_OR_TYPE"
      }
    }
  ]
}
